kubernetes_deployment/components/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: 52north/directed-api:latest
        imagePullPolicy: Always
        resources:
         requests:
           memory: 1000M
           cpu: 250m
         limits:
           memory: 1500M
           cpu: 500m
        ports:
        - containerPort: 80
        volumeMounts:
        - name: api-config-volume
          mountPath: /pygeoapi/local.config.yml
          subPath: local.config.yml
        - name: pygeoapi-data
          mountPath: /pygeoapi/data/collections
      volumes:
      - name: api-config-volume
        configMap:
          name: api-config
      - name: pygeoapi-data
        persistentVolumeClaim:
          claimName: api-data
      restartPolicy: Always
      serviceAccountName: ""
