kubernetes_deployment/components/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
  - name: "http"
    port: 80
    targetPort: 80
