kubernetes_deployment/components/api/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: directed-api-rewrite
  namespace: <my-namespace>
spec:
  replacePathRegex:
    regex: "^/api(/?)(.*)"
    replacement: "/api/$2"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: <my-namespace>
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: <my-namespace>-directed-api-rewrite@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - <my-host>
    secretName: <my-tls-secret-name>
  rules:
  - host: <my-host>
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
